fix images on safari

--- a/src/synth-kitchen/styles/home.css
+++ b/src/synth-kitchen/styles/home.css
@@ -58,6 +58,7 @@ header.page-home nav {
 
 .page-home img {
   width: 50%;
+  height: 50%;
 }
 
 .page-home figcaption {
